--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,44 +1,19 @@
+name: Node Build
+
 on:
   push:
-    branches: [ "master" ]
-  workflow_dispatch:
-
-env:
-  AZURE_WEBAPP_NAME: Trello API Project 
-  AZURE_WEBAPP_PACKAGE_PATH: '.'     
-  NODE_VERSION: '20.10.0'            
-
-permissions:
-  contents: read
+    branches:
+      - master
 
 jobs:
   build:
+    name: Node Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
-
-  deploy:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: build
-  
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v3
-      with:
-        name: node-app
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v4.0.0
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+      - name: Install dependencies
+        run: npm install
