--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install -g newman-reporter-htmlextra
       # - name: change directory into the project folder
       #   run: cd "Trello's APIs testing"
-      # - name: list folder components
-      #   run: ls
-      - name: run Automation project
-        run: newman run "$PWD/Test-TRELLO-REST-APIs.postman_collection.json" -e "$PWD/Trello-APIs.postman_environment.json" --reporters=cli,htmlextra
+      - name: list folder components
+        run: cd .. ; ls 
+      # - name: run Automation project
+      #   run: newman run "$PWD/Test-TRELLO-REST-APIs.postman_collection.json" -e "$PWD/Trello-APIs.postman_environment.json" --reporters=cli,htmlextra
