--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -22,6 +22,6 @@ jobs:
       # - name: change directory into the project folder
       #   run: cd "Trello's APIs testing"
       - name: list folder components
-        run: cd "Trello's APIs testing" ; ls ; newman run "Test-TRELLO-REST-APIs.postman_collection.json" -e "Trello-APIs.postman_environment.json" --reporters=cli,htmlextra
+        run: cd "Trello's APIs testing" ; ls ; newman run "Test-TRELLO-REST-APIs.postman_collection.json" -e "Trello-APIs.postman_environment.json" --reporters=cli,htmlextra ; newman run "Test-TRELLO-REST-APIs.postman_collection.json" -e "Trello-APIs.postman_environment.json" -r htmlextra --reporter-htmlextra-export ./results/report.html ; cd results ; ls
       # - name: run Automation project
       #   run: newman run "Test-TRELLO-REST-APIs.postman_collection.json" -e "Trello-APIs.postman_environment.json" --reporters=cli,htmlextra
